--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 		<h1> This is header </h1> 
 		<p>tHIS IS A PARAGRAPH</p>
 		<p>tHIS IS second PARAGRAPH</p>
+		<p>tHIS IS third PARAGRAPH</p>
 	</body>
 </html>	
