Created package.json file

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 		<p>tHIS IS A PARAGRAPH</p>
 		<p>tHIS IS second PARAGRAPH</p>
 		<p>tHIS IS third PARAGRAPH</p>
+		<p>This is fourth paragraph</p>
 	</body>
 </html>	
